--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,19 +20,19 @@
 </head>
 <body>
     <header>
-        <picture>
-            <source srcset="./images/logo-test.webp" media="(max-width: 500px)" width="200">
-            <img id="logo" src="./images/logo-test.webp" alt="Logo" width="375">
-        </picture>
         <nav>
+            <div>
+                <picture id="logo">
+                    <source srcset="./images/logo-test.webp" media="(max-width: 500px)" width="200">
+                    <img src="./images/logo-test.webp" alt="Logo" width="375">
+                </picture>
+            </div>
             <button id="menu"></button>
             <ul class="navigation">
-                <li>
-                    <a href="./index.html">Home</a>
-                    <a href="./discover.html">Discover</a>
-                    <a href="./directory.html">Directory</a>
-                    <a href="./join.html">Join</a>
-                </li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./discover.html">Discover</a></li>
+                <li><a href="./directory.html">Directory</a></li>
+                <li><a href="./join.html">Join</a></li>
             </ul>
         </nav>
     </header>
