--- a/chamber/join.html
+++ b/chamber/join.html
@@ -20,19 +20,19 @@
 </head>
 <body>
     <header>
-        <picture>
-            <source srcset="./images/logo-test.webp" media="(max-width: 500px)" width="200">
-            <img id="logo" src="./images/logo-test.webp" alt="Logo" width="375">
-        </picture>
         <nav>
+            <div>
+                <picture id="logo">
+                    <source srcset="./images/logo-test.webp" media="(max-width: 500px)" width="200">
+                    <img src="./images/logo-test.webp" alt="Logo" width="375">
+                </picture>
+            </div>
             <button id="menu"></button>
             <ul class="navigation">
-                <li>
-                    <a href="./index.html">Home</a>
-                    <a href="./discover.html">Discover</a>
-                    <a href="./directory.html">Directory</a>
-                    <a href="./join.html">Join</a>
-                </li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./discover.html">Discover</a></li>
+                <li><a href="./directory.html">Directory</a></li>
+                <li><a href="./join.html">Join</a></li>
             </ul>
         </nav>
     </header>
@@ -65,7 +65,7 @@
                         <li>All Bronze membership benefits</li>
                         <li>Priority access to workshops and trainings</li>
                         <li>Featured in Chamber's monthly newsletter</li>
-                        <li>Increased visibility on the Chamber's website</li>
+                        <li>Premier spotlight position on the Chamber's home page</li>
                     </ul>
                 </section>
                 <section class="membership-levels" id="gld">
@@ -74,7 +74,6 @@
                         <li class="fee">Annual Fee: $1,200.00</li>
                         <li>All Silver membership fees</li>
                         <li>Exclusive invitations to VIP events</li>
-                        <li>Premier spotlight position on the Chamber's home page</li>
                         <li>Personalized marketing support and consultation from experts</li>
                         <li>Discounts on Chamber services, advertising, and sponsorships</li>
                     </ul>
