--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,9 +45,7 @@
     <main>
         <div>
             <picture>
-                <source srcset="./images/home-hero-small.webp" media="(max-width: 500px)" width="500" 
-                height="500">
-                <img src="./images/home-hero2.webp" alt="Grand Tetons">
+                <img src="./images/home-hero2.webp" alt="Grand Tetons" class="responsive">
             </picture>
         </div>
         <div class="home-h1">
