--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,8 +39,8 @@
     <main>
         <h1 id="directory-title">Business Directory</h1>
         <div class="directory-menu">
-            <button id="grid-btn">⏹️ Grid</button>
-            <button id="list-btn">📄 List</button>
+            <button id="grid-btn">⏹️ Grid View</button>
+            <button id="list-btn">📄 List View</button>
         </div>
         <div class="directory-grid busCards"></div>
     </main>
