--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,12 +53,8 @@
         </div>
         <div id="weather-card">
             <div class="weather-container">
-                <p>Weather Today: </p>
-                <figure>
-                    <img id="weather-icon" src="" alt="">
-                    <figcaption></figcaption>
-                </figure>
                 <span id="current-temp"></span>
+                <span id="weather-desc"></span>
             </div>
             <div id="forecastContainer"></div>
         </div>
