--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,10 +26,9 @@
     <header>
         <nav>
             <div>
-                <picture id="logo">
-                    <source srcset="./images/logo-test.webp" media="(max-width: 500px)" width="200">
-                    <img src="./images/logo-test.webp" alt="Logo" width="375">
-                </picture>
+                <div id="logo">
+                    <a href="./index.html"><img src="./images/logo-test.webp" alt="Logo" width="375"></a>
+                </div>
             </div>
             <ul class="navigation">
                 <li><a href="./index.html">Home</a></li>
