--- a/chamber/join.html
+++ b/chamber/join.html
@@ -22,10 +22,9 @@
     <header>
         <nav>
             <div>
-                <picture id="logo">
-                    <source srcset="./images/logo-test.webp" media="(max-width: 500px)" width="200">
-                    <img src="./images/logo-test.webp" alt="Logo" width="375">
-                </picture>
+                <div id="logo">
+                    <a href="./index.html"><img src="./images/logo-test.webp" alt="Logo" width="375"></a>
+                </div>
             </div>
             <button id="menu"></button>
             <ul class="navigation">
