--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,18 +45,18 @@
                 <section class="weather">
                     <h2>Snow Report</h2>
                     <h3>Grand Targhee Resort</h3>
-                    <p>Overnight - 0"</p>
-                    <p>24 HR - 12"</p>
-                    <p>48 HR - 12"</p>
-                    <p>Depth - 8"</p>
-                    <p>Season - 12"</p>
+                    <p>Overnight - 6"</p>
+                    <p>24 HR - 17"</p>
+                    <p>48 HR - 25"</p>
+                    <p>Depth - 59"</p>
+                    <p>Season - 121"</p>
                     <h3>Jackson Hole Mountain Resort</h3>
-                    <p>Overnight - 0"</p>
-                    <p>24 HR - 0"</p>
-                    <p>48 HR - 0"</p>
-                    <p>Depth - 0"</p>
-                    <p>Season - 14"</p>
-                    <h4>Last Updated: 10/24/2023</h4>
+                    <p>Overnight - 4"</p>
+                    <p>24 HR - 9"</p>
+                    <p>48 HR - 19"</p>
+                    <p>Depth - 46"</p>
+                    <p>Season - 122"</p>
+                    <h4>Last Updated: 12/9/2023</h4>
                 </section>
                 <section class="popular">
                     <h2>Popular Sights</h2>
@@ -88,11 +88,11 @@
                     </ul>
                     <h3>Jackson Hole Mountain Resort</h3>
                     <ul>
-                        <li>Closed - Opening 11/24</li>
+                        <li>Open</li>
                     </ul>
                     <h3>Grand Targhee Resort</h3>
                     <ul>
-                        <li>Closed - Opening 11/18</li>
+                        <li>Open</li>
                     </ul>
                 </section>
                 <section class="lodging">
